[package]
name = "rsp-api-check"
version = "0.1.0"
edition = "2021"
description = "API comparison tool for the react-spectrum monorepo"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "2", features = ["text"] }
glob = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
colored = "2"
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
futures = "0.3"
